--- a/Two Cars/Base.lproj/LaunchScreen.storyboard
+++ b/Two Cars/Base.lproj/LaunchScreen.storyboard
@@ -28,11 +28,19 @@
                                     <constraint firstAttribute="width" constant="300" id="jvA-zc-95V"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="© 2017 Aatish Rajkarnikar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3nj-sV-tMe">
+                                <rect key="frame" x="89" y="626" width="197" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Pqi-jL-4IU" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="60T-FD-OQh"/>
+                            <constraint firstItem="3nj-sV-tMe" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="778-2u-qyb"/>
                             <constraint firstItem="Pqi-jL-4IU" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="cVO-mf-dsG"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="3nj-sV-tMe" secondAttribute="bottom" constant="20" id="gF8-Lh-p5U"/>
                         </constraints>
                     </view>
                 </viewController>
